Finnish noun, etymology, notes <mono#48370>

--- a/wiki/mono.wikitext
+++ b/wiki/mono.wikitext
@@ -24,6 +24,24 @@
 
 ----
 
+==Finnish==
+
+===Etymology===
+Shortened from the family name ''Mononen''.
+
+===Noun===
+'''mono'''
+
+# (''colloquial'') [[skiing shoe]]
+
+====Synonyms====
+*(1): [[hiihtokenkä]]
+
+====Notes====
+*This is still a trademark, owned by the Mono company.
+
+----
+
 ==Japanese [[Romaji]]==
 ===Noun===
 '''mono''' ([[もの]]) 
