--- a/wiki/fornication.wikitext
+++ b/wiki/fornication.wikitext
@@ -4,7 +4,7 @@
 
 '''fornication'''
 
-#Unlawful sexual intercourse on the part of an unmarried person; the act of such illicit sexual intercourse between a man and a woman as does not by law amount to adultery.
+#Unlawful sexual intercourse,especially on the part of an unmarried person; the act of such illicit sexual intercourse between a man and a woman as does not by law amount to adultery.
 #Adultery.
 #Incest.
 #Idolatry.
