/* Declension */ table fmt <calx#39913>

--- a/wiki/calx.wikitext
+++ b/wiki/calx.wikitext
@@ -25,27 +25,27 @@ Ancient Greek ''[[χάλιξ]]'' '''pebble'''
 Third declension; I-stem, base of 2 consonants (3:B2C).
 
 {| cellpadding="5" border="1"
-! ''Case \ #''
-! ''F.''
-! ''FF.''
+!style="background:#F1BC4E;"| ''Case \ #''
+!style="background:#C0C0C0;"| ''F.''
+!style="background:#C0C0C0;"| ''FF.''
 |-
-! ''Nominative''
+!style="background:#C0C0C0;"| ''Nominative''
 | <big> calx
 | <big> calc&#275;s
 |-
-! ''Genitive''
+!style="background:#C0C0C0;"| ''Genitive''
 | <big> calcis
 | <big> calcium
 |-
-! ''Dative''
+!style="background:#C0C0C0;"| ''Dative''
 | <big> calc&#299;
 | <big> calcibus
 |-
-! ''Accusative''
+!style="background:#C0C0C0;"| ''Accusative''
 | <big> calcem
 | <big> calc&#275;s
 |-
-! ''Ablative''
+!style="background:#C0C0C0;"| ''Ablative''
 | <big> calce
 | <big> calcibus
 |}
