--- a/wiki/calx.wikitext
+++ b/wiki/calx.wikitext
@@ -61,3 +61,6 @@ Possibly from an extension of the Proto-Indo-European root ''*(s)kel-'' "to bend
 *[[calceus]]
 *[[calcitro]]
 *[[recalcitrant]]
+
+====Declension====
+Same as for Etymology 1.
