--- a/wiki/devil.wikitext
+++ b/wiki/devil.wikitext
@@ -1,5 +1,5 @@
 ===Etymology===
-From Latin '''[[diabolus]]''', from Greek '''diabolos'''
+From Latin '''[[diabolus]]''', from Greek '''diabolos''' greek for [[slanderer]]
 
 ===Noun===
 '''devil''' (plural '''[[devils]]''')
