/* Noun */added link <whore#38138>

--- a/wiki/whore.wikitext
+++ b/wiki/whore.wikitext
@@ -7,7 +7,7 @@
 ===Noun===
 '''whore''' (plural: [[whores]])
 
-# a prostitute.
+# a [[prostitute]].
 
 ====Translations====
 *German:  [[Hure]], [[Nutte]]
