meanings: +(2), trans: +Latin +Spanish <taste#45376>

--- a/wiki/taste.wikitext
+++ b/wiki/taste.wikitext
@@ -1,4 +1,9 @@
 ==English==
-*One of the sensations produced by the [[tongue]] in response to certain chemicals often confused and/or mixed somewhat with [[smell]]ing.  The primary sensations classified as taste are: [[sweet]], [[sour]], [[bitter]], [[salty]] and [[umami]]
+# One of the sensations produced by the [[tongue]] in response to certain chemicals often confused and/or mixed somewhat with [[smell]]ing.  The primary sensations classified as taste are: [[sweet]], [[sour]], [[bitter]], [[salty]] and [[umami]].
+# A person's generic, implicit set of preferences, especially esthetic, though also culinary, sartorial, etc.
+#: ''Dr. Parker has a good taste for wine.''  
+
 ===Translations===
 *{{ro}}: gust ''n''
+*Latin: [[gustus]] ''m''
+*Spanish: [[gusto]] ''m''
