--- a/wiki/Scotland.wikitext
+++ b/wiki/Scotland.wikitext
@@ -2,7 +2,7 @@
 ===Proper noun===
 '''Scotland'''
 
-A country in the island of Great Britain to the north of [[England]] and forming part of the [[United Kingdom]].
+A country in northwest [[Europe]] to the north of [[England]] and forming part of the [[United Kingdom]].
 
 ====Translations====
 *[[Bosnian]]: Škotska ''f''
