--- a/wiki/staal.wikitext
+++ b/wiki/staal.wikitext
@@ -1,5 +1,5 @@
 ===Noun===
-'''staal''' ([[ontelbaar]])
+'''staal''' ([[uncountable]])
 # een legering bestaande uit vooral [[ijzer]] met [[koolstof]].
 
 ====Translations====
