--- a/wiki/Sherlock_Holmes.wikitext
+++ b/wiki/Sherlock_Holmes.wikitext
@@ -1,2 +1,2 @@
-A fictional detective invented Sir Arthur Conan Doyle.
+A fictional detective invented by Sir Arthur Conan Doyle.
 *External link:[http://en.wikipedia.org/wiki/Sherlock_Holmes See article at Wikipedia]
