--- a/wiki/syrup.wikitext
+++ b/wiki/syrup.wikitext
@@ -10,5 +10,6 @@
 *[[golden syrup]]
 *[[maple syrup]]
 *[[syrup of figs]]
+
 ==Translations==
-*[[Dutch]] [[siroop]] ''m''
+*[[Dutch]]: [[siroop]] ''m''
