--- a/wiki/siroop.wikitext
+++ b/wiki/siroop.wikitext
@@ -1,7 +1,7 @@
 ==Noun==
 '''siroop''' ''m''
-# een stroperige vloeistof die meestal bij eetbaar goed wordt genuttigd (als een extra'tje).
-* het kan een varia aan smaken hebben: sinassappelstroop, aarbeistroop.
+# een stroperige vloeistof die meestal bij voedsel wordt genuttigd, het heeft een hoge [[suiker]] gehalte (als een extra'tje).
+* het kan een varia aan smaken hebben: sinassappelstroop, aarbeistroop (etc.)
 
 ==Translations==
 *[[English]]: [[syrup]]
