See also. <calcium#30008>

--- a/wiki/calcium.wikitext
+++ b/wiki/calcium.wikitext
@@ -3,8 +3,7 @@
 **Next: [[Scandium|Sc]]
 ----
 === Noun ===
-'''calcium''' ([[en:Calcium|Wikipedia:Calcium]])
-
+'''calcium''' 
 # a chemical element (''symbol'' Ca) with an [[atomic number]] of 20.
 # an ion intimately involved in the physiology of biological cells.
 
@@ -82,6 +81,10 @@
 *[[Welsh]]: [[calsiwm]]
 |}
 |}
+
+====See also====
+*[http://en.wikipedia.org/wiki/Calcium Wikipedia article on calcium]
+
 ====External links====
 For etymology and more information refer to:
 http://elements.vanderkrogt.net/elem/be.html
