--- a/wiki/voedsel.wikitext
+++ b/wiki/voedsel.wikitext
@@ -2,5 +2,5 @@
 '''voedsel''' ''f''
 # alles wat een [[organisme]] nuttigd om in leven te kunnen blijven of om zich te ontwikkelen.
 
-==Translation===
+==Translation==
 *[[English]]: [[food]] ''m''
