--- a/wiki/organisme.wikitext
+++ b/wiki/organisme.wikitext
@@ -1,6 +1,6 @@
 ==Noun==
 '''organisme''' ''n''
-# een [[nl: leven|levend]] wezen.
+# een compleet [[nl:leven|levend]] wezen bestaande uit organen.
 
 ==Translation==
 *[[English]]: [[organism]] ''m''
