--- a/wiki/organisme.wikitext
+++ b/wiki/organisme.wikitext
@@ -1,5 +1,5 @@
 ==Noun==
-'''organisme''' ''n''
+'''organisme''' ''n'' (plural: organismen)
 # een compleet [[leven|levend]] wezen bestaande uit organen.
 
 ==Translation==
