--- a/wiki/organisme.wikitext
+++ b/wiki/organisme.wikitext
@@ -1,6 +1,6 @@
 ==Noun==
 '''organisme''' ''n'' (plural: organismen)
-# een compleet [[leven|levend]] wezen bestaande uit [[organen]].
+# een compleet [[leven|levend]] wezen bestaande uit [[orgaan|organen]].
 
 ==Translation==
 *[[English]]: [[organism]] ''m''
