--- a/wiki/orgaan.wikitext
+++ b/wiki/orgaan.wikitext
@@ -1,6 +1,6 @@
 ==[[Dutch]]==
 ===Noun===
-'''orgaan''' ''n'' (Plural: [[organen]], diminutive: [[orgaantje]], plural diminutive: [[orgaantjes]])
+'''orgaan''' ''n'' (plural: [[organen]], diminutive: [[orgaantje]], plural diminutive: [[orgaantjes]])
 
 ===Translations===
 *[[English]]: [[organ]]
