--- a/wiki/leven.wikitext
+++ b/wiki/leven.wikitext
@@ -5,6 +5,6 @@
 # to [[live]]
 
 ===Noun===
-'''leven''' ''n'' (plural: [[levens]], diminutive: [[leventje]])
+'''leven''' ''n'' (plural: [[leven|levens]], diminutive: [[leven|leventje]])
 
-# [[life]]
+#[[English]]: [[life]]
