Move wikipedia link to bottom See also section. <limestone#64350>

--- a/wiki/limestone.wikitext
+++ b/wiki/limestone.wikitext
@@ -4,7 +4,7 @@
 :lime' stone
 ===Noun===
 
-#An abundant [[rock]] of [[marine]] and fresh-water [[sediment]]s. Primarily composed of [[calcite]]. Limestone occurs in a variety of forms, both [[crystal]]line and [[amorphous]]. There is a complete article at [[Wikipedia:Limestone]].
+#An abundant [[rock]] of [[marine]] and fresh-water [[sediment]]s. Primarily composed of [[calcite]]. Limestone occurs in a variety of forms, both [[crystal]]line and [[amorphous]]. 
 
 === Chemical composition ===
 *Calcium carbonate, <math>CaCO_3</math>
@@ -16,6 +16,10 @@
 *Fracture: Uneven
 
 ===Related words===
-:''See'' [[Rock]], [[Mineral]]
+*[[Rock]]
+*[[Mineral]]
+
+===See also===
+*[[Wikipedia:Limestone]]
 
 [[Category:Mineralogy]]
