--- a/wiki/gustus.wikitext
+++ b/wiki/gustus.wikitext
@@ -2,3 +2,32 @@
 ===Noun===
 '''gustus''' (''genitive'' '''gust&#363;s''')
 # Taste.
+
+====Declension====
+Fourth declension (4).
+
+{| cellpadding="5" border="1"
+!style="background:#F1BC4E;"| ''Case \ #''
+!style="background:#C0C0C0;"| ''M.''
+!style="background:#C0C0C0;"| ''MM.''
+|-
+!style="background:#C0C0C0;"| ''Nominative''
+| <big> gustus
+| <big> gust&#363;s
+|-
+!style="background:#C0C0C0;"| ''Genitive''
+| <big> gust&#363;s
+| <big> gustuum
+|-
+!style="background:#C0C0C0;"| ''Dative''
+| <big> gustu&#299;
+| <big> gustibus
+|-
+!style="background:#C0C0C0;"| ''Accusative''
+| <big> gustum
+| <big> gust&#363;s
+|-
+!style="background:#C0C0C0;"| ''Ablative''
+| <big> gust&#363;
+| <big> gustibus
+|}
