link to Taste <gustus#65493>

--- a/wiki/gustus.wikitext
+++ b/wiki/gustus.wikitext
@@ -1,7 +1,7 @@
 ==Latin==
 ===Noun===
 '''gustus''' (''genitive'' '''gust&#363;s''')
-# Taste.
+# [[Taste]].
 
 ====Declension====
 Fourth declension (4).
