--- a/wiki/scire.wikitext
+++ b/wiki/scire.wikitext
@@ -1,4 +1,7 @@
 ==Latin==
+===Pronunciation===
+* [[AHD]]: <big> sk&#275;&prime; r&#277; </big>
+
 ===Verb===
 '''[[scio]]''', '''scire''', '''[[scivi]]''', '''scitus'''
 
