--- a/wiki/integration.wikitext
+++ b/wiki/integration.wikitext
@@ -7,4 +7,6 @@
 #In the theory of [[evolution]]: The process by which the manifold is compacted into the relatively simple and permanent. It is supposed to alternate with differentiation as an agent in development.
 
 ====Translations====
+*German: Integration
 *Swedish: integration
+*Bulgarian: интеграция
