link to whole <wholeness#65506>

--- a/wiki/wholeness.wikitext
+++ b/wiki/wholeness.wikitext
@@ -1,4 +1,4 @@
 ==English==
 ===Noun===
 '''wholeness'''
-# The quality of something considered as a whole.
+# The quality of something considered as a [[whole]].
