Conjugation: Present. <cognoscere#65507>

--- a/wiki/cognoscere.wikitext
+++ b/wiki/cognoscere.wikitext
@@ -4,4 +4,34 @@
 
 ===Verb===
 ('''cogn&#333;sc&#333;''', '''cogn&#333;scere''', '''cogn&#333;v&#299;''',  '''cognitum''')
-# To know, to recognize, to be acquainted with.
+# To know, as in: to recognize, to be acquainted with.
+
+====Conjugation====
+Third conjugation (3).
+
+=====<u>''Present''</u>=====
+cogn&#333;sc&#333; : ''I know'' <br>
+cogn&#333;scis : ''you know'' <br>
+cogn&#333;scit : ''he/she/it knows'' <br>
+:&mdash; <br>
+cogn&#333;scimus : ''we know'' <br>
+cogn&#333;scitis : ''you (all) know'' <br>
+cogn&#333;scunt : ''they know'' <br>
+
+=====<u>''Future''</u>=====
+cogn&#333;sc&#257;m : ''I will know'' <br>
+cogn&#333;sc&#275;s : ''you will know'' <br>
+cogn&#333;scet : ''he/she/it will know'' <br>
+:&mdash; <br>
+cogn&#333;sc&#275;mus : ''we will know'' <br>
+cogn&#333;sc&#275;tis : ''you (all) will know'' <br>
+cogn&#333;scent : ''they will know'' <br>
+
+=====<u>''Imperfect''</u>=====
+cogn&#333;sc&#275;bam : ''I used to know'' <br>
+cogn&#333;sc&#275;b&#257;s : ''you used to know'' <br>
+cogn&#333;sc&#275;bat : ''he/she/it used to know'' <br>
+:&mdash; <br>
+cogn&#333;sc&#275;b&#257;mus : ''we used to know'' <br>
+cogn&#333;sc&#275;b&#257;tis : ''you (all) used to know'' <br>
+cogn&#333;sc&#275;bant : ''they used to know'' <br>
