/* Conjugation */ Perfect triad. <cognoscere#65507>

--- a/wiki/cognoscere.wikitext
+++ b/wiki/cognoscere.wikitext
@@ -35,3 +35,30 @@ cogn&#333;sc&#275;bat : ''he/she/it used to know'' <br>
 cogn&#333;sc&#275;b&#257;mus : ''we used to know'' <br>
 cogn&#333;sc&#275;b&#257;tis : ''you (all) used to know'' <br>
 cogn&#333;sc&#275;bant : ''they used to know'' <br>
+
+=====<u>''Perfect''</u>=====
+cogn&#333;v&#299; : ''I knew''<br>
+cogn&#333;vist&#299; : ''you knew''<br>
+cogn&#333;vit : ''he/she/it knew''<br>
+:&mdash; <br>
+cogn&#333;vimus : ''we knew''<br>
+cogn&#333;vistis : ''you (all) knew''<br>
+cogn&#333;v&#275;runt : ''they knew''<br>
+
+=====<u>''Future Perfect''</u>=====
+cogn&#333;ver&#333; : ''I will have known''<br>
+cogn&#333;veris : ''you will have known''<br>
+cogn&#333;verit : ''he/she/it will have known'' <br>
+:&mdash; <br>
+cogn&#333;verimus : ''we will have known'' <br>
+cogn&#333;veritis : ''you all will have known'' <br>
+cogn&#333;verint : ''they will have known'' <br>
+
+=====<u>''Pluperfect''</u>=====
+cogn&#333;veram : ''I had known'' <br>
+cogn&#333;ver&#257;s : ''you had known'' <br>
+cogn&#333;verat : ''he/she/it had known'' <br>
+:&mdash; <br>
+cogn&#333;ver&#257;mus : ''we had known'' <br>
+cogn&#333;ver&#257;tis : ''you (all) had known'' <br>
+cogn&#333;verant : ''they had known'' <br>
