--- a/wiki/koolstof.wikitext
+++ b/wiki/koolstof.wikitext
@@ -1,7 +1,4 @@
-===Noun===
+===Dutch===
+==Noun==
 '''koolstof''' ([[uncountable]])
-# een element die het meest voorkomt in de natuur.
-* komt ook voor in grafiet en kan worden gebruikt om bepaalde materialen te fabriceren: [[staal]],
-
-==Translations==
-*[[English]] [[carbon]]
+# carbon
