removed dutch <staal#65491>

--- a/wiki/staal.wikitext
+++ b/wiki/staal.wikitext
@@ -1,13 +1,4 @@
+==Dutch==
 ===Noun===
 '''staal''' ([[uncountable]])
-# een legering bestaande uit vooral [[ijzer]] met [[koolstof]].
-
-====Translations====
-*[[English]]: [[steel]]
-*[[Finnish]]: [[teräs]]
-*[[French]]: [[acier]] ''m''
-*[[German]]: [[Stahl]] ''m''
-*[[Hindi]]: [[इस्पात]] ''m''
-*[[Italian]]: [[acciaio]] ''m''
-*[[Slovak]]: [[oceľ]] ''f''
-*[[Swedish]]: [[stål]]
+# [[Steel]]
