removed dutch <siroop#65499>

--- a/wiki/siroop.wikitext
+++ b/wiki/siroop.wikitext
@@ -1,7 +1,4 @@
-==Noun==
+==Dutch==
+===Noun===
 '''siroop''' ''m''
-# een stroperige vloeistof die meestal bij voedsel wordt genuttigd, het heeft een hoge [[suiker]] gehalte (als een extra'tje).
-* het kan een varia aan smaken hebben: sinassappelstroop, aarbeistroop (etc.)
-
-==Translations==
-*[[English]]: [[syrup]]
+# [[syrup]]
