/* Conjugation */ Present Passive triad. <cognoscere#65507>

--- a/wiki/cognoscere.wikitext
+++ b/wiki/cognoscere.wikitext
@@ -62,3 +62,30 @@ cogn&#333;verat : ''he/she/it had known'' <br>
 cogn&#333;ver&#257;mus : ''we had known'' <br>
 cogn&#333;ver&#257;tis : ''you (all) had known'' <br>
 cogn&#333;verant : ''they had known'' <br>
+
+=====<u>''Present Passive''</u>=====
+cogn&#333;scor : ''I am known'' <br>
+cogn&#333;sceris : ''you are known'' <br>
+cogn&#333;scitur : ''he/she/it is known'' <br>
+:&mdash; <br>
+cogn&#333;scimur : ''we are known'' <br>
+cogn&#333;scimin&#299; : ''you (all) are known'' <br>
+cogn&#333;scuntur : ''they are known'' <br>
+
+=====<u>''Future Passive''</u>=====
+cogn&#333;scar : ''I will be known'' <br>
+cogn&#333;sc&#275;ris : ''you will be known'' <br>
+cogn&#333;sc&#275;tur : ''he/she/it will be known'' <br>
+:&mdash; <br>
+cogn&#333;sc&#275;mur : ''we will be known'' <br>
+cogn&#333;sc&#275;min&#299; : ''you (all) will be known'' <br>
+cogn&#333;scentur : ''they will be known'' <br>
+
+=====<u>''Imperfect Passive''</u>=====
+cogn&#333;sc&#275;bar : ''I used to be known'' <br>
+cogn&#333;sc&#275;b&#257;ris : ''you used to be known'' <br>
+cogn&#333;sc&#275;b&#257;tur : ''he/she/it used to be known'' <br>
+:&mdash; <br>
+cogn&#333;sc&#275;b&#257;mur : ''we used to be known'' <br>
+cogn&#333;sc&#275;b&#257;min&#299; : ''you (all) used to be known'' <br>
+cogn&#333;sc&#275;bantur : ''they used to be known'' <br>
