removed dutch <voedsel#65502>

--- a/wiki/voedsel.wikitext
+++ b/wiki/voedsel.wikitext
@@ -1,6 +1,4 @@
-==Noun==
+==Dutch==
+===Noun===
 '''voedsel''' ''f''
-# alles wat een [[organisme]] nuttigd om in leven te kunnen blijven of om zich te ontwikkelen.
-
-==Translation==
-*[[English]]: [[food]] ''m''
+# [[food]]
