--- a/wiki/cognoscere.wikitext
+++ b/wiki/cognoscere.wikitext
@@ -89,3 +89,30 @@ cogn&#333;sc&#275;b&#257;tur : ''he/she/it used to be known'' <br>
 cogn&#333;sc&#275;b&#257;mur : ''we used to be known'' <br>
 cogn&#333;sc&#275;b&#257;min&#299; : ''you (all) used to be known'' <br>
 cogn&#333;sc&#275;bantur : ''they used to be known'' <br>
+
+=====<u>''Perfect Passive''</u>=====
+cognitus/cognita/cognitum sum : ''I have been known'' <br>
+cognitus/cognita/cognitum es : ''you have been known'' <br>
+cognitus/cognita/cognitum est : ''he/she/it has been known'' <br>
+:&mdash; <br>
+cognit&#299;/cognitae/cognita sumus : ''we have been known'' <br>
+cognit&#299;/cognitae/cognita estis : ''you (all) have been known'' <br>
+cognit&#299;/cognitae/cognita sunt : ''they have been known'' <br>
+
+=====<u>''Future Perfect Passive''</u>=====
+cognitus/cognita/cognitum er&#333; : ''I will have been known'' <br>
+cognitus/cognita/cognitum eris : ''you will have been known'' <br>
+cognitus/cognita/cognitum erit : ''he will have been known'' <br>
+:&mdash; <br>
+cognit&#299;/cognitae/cognita erimus : ''we will have been known'' <br>
+cognit&#299;/cognitae/cognita eritis : ''you (all) will have been known'' <br>
+cognit&#299;/cognitae/cognita erunt : ''they will have been known'' <br>
+
+=====<u>''Pluperfect Passive''</u>=====
+cognitus/cognita/cognitum eram : ''I had been known'' <br>
+cognitus/cognita/cognitum er&#257;s : ''you had been known'' <br>
+cognitus/cognita/cognitum erat : ''he/she/it had been known'' <br>
+:&mdash; <br>
+cognit&#299;/cognitae/cognita er&#257;mus : ''we had been known'' <br>
+cognit&#299;/cognitae/cognita er&#257;tis : ''you (all) had been known'' <br>
+cognit&#299;/cognitae/cognita erant : ''they had been known'' <br>
