added external link <Old Testament#65512>

--- a/wiki/Old_Testament.wikitext
+++ b/wiki/Old_Testament.wikitext
@@ -1,1 +1,2 @@
-The Old Testament or [[the Hebrew Scriptures]] constitutes the first major part of the Christian Bible, usually divided into the categories law, history, poetry (or wisdom books) and prophecy. All of those books were written before the birth of Jesus.
+The Old Testament or [[the Hebrew Scriptures]] constitutes the first major part of the Christian Bible, usually divided into the categories law, history, poetry (or wisdom books) and prophecy. All of those books were written before the coming of Christ.
+*External links:[http://en.wikipedia.org/wiki/Old_testament "Old Testament" at Wikipedia]
