/* Verb */ Present Subjunctive quartet. <cognoscere#65507>

--- a/wiki/cognoscere.wikitext
+++ b/wiki/cognoscere.wikitext
@@ -116,3 +116,39 @@ cognitus/cognita/cognitum erat : ''he/she/it had been known'' <br>
 cognit&#299;/cognitae/cognita er&#257;mus : ''we had been known'' <br>
 cognit&#299;/cognitae/cognita er&#257;tis : ''you (all) had been known'' <br>
 cognit&#299;/cognitae/cognita erant : ''they had been known'' <br>
+
+=====<u>''Present Subjunctive''</u>=====
+cogn&#333;scam : ''I may know'' <br>
+cogn&#333;sc&#257;s : ''you may know'' <br>
+cogn&#333;scat : ''he/she/it may know'' <br>
+:&mdash; <br>
+cogn&#333;sc&#257;mus : ''we may know'' <br>
+cogn&#333;sc&#257;tis : ''you (all) may know'' <br>
+cogn&#333;scant : ''they may know'' <br>
+
+=====<u>''Present Subjunctive Passive''</u>=====
+cogn&#333;scar : ''maybe I am known'' <br>
+cogn&#333;sc&#257;ris : ''maybe you are known'' <br>
+cogn&#333;sc&#257;tur : ''maybe he/she/it is known'' <br>
+:&mdash; <br>
+cogn&#333;sc&#257;mur : ''maybe we are known'' <br>
+cogn&#333;sc&#257;min&#299; : ''maybe you (all) are known'' <br>
+cogn&#333;scantur : ''maybe they are known'' <br>
+
+=====<u>''Imperfect Subjunctive''</u>=====
+cogn&#333;scerem : ''maybe I used to know'' <br>
+cogn&#333;scer&#275;s : ''maybe you used to know'' <br>
+cogn&#333;sceret : ''maybe he/she/it used to know'' <br>
+:&mdash; <br>
+cogn&#333;scer&#275;mus : ''maybe we used to know'' <br>
+cogn&#333;scer&#275;tis : ''maybe you (all) used to know'' <br>
+cogn&#333;scerent : ''maybe they used to know'' <br>
+
+=====<u>''Imperfect Subjunctive Passive''</u>=====
+cogn&#333;scerer : ''maybe I used to be known'' <br>
+cogn&#333;scer&#275;ris : ''maybe you used to be known'' <br>
+cogn&#333;scer&#275;tur : ''maybe he/she/it used to be known'' <br>
+:&mdash; <br>
+cogn&#333;scer&#275;mur : ''maybe we used to be known'' <br>
+cogn&#333;scer&#275;min&#299; : ''maybe you (all) used to be known'' <br>
+cogn&#333;scerentur : ''maybe they used to be known'' <br>
