--- a/wiki/Jesus.wikitext
+++ b/wiki/Jesus.wikitext
@@ -35,7 +35,7 @@
 {|
 <!--languages from J to Z go here-->
 *Japanese: [[イエス]] (Iesu)
-*Latin: [[Iesus]] ''m''
+*Latin: [[Iesu]] ''m''
 *Norwegian: Jesus
 *Polish: [[Jezus]]
 *Romanian: [[Isus]]
