--- a/wiki/Christ.wikitext
+++ b/wiki/Christ.wikitext
@@ -1,6 +1,7 @@
 ==English==
 ===Etymology===
-From Greek Χριστος (Χριστ-ος), 'annointed'.
+From Greek Χριστος (Χριστ-ος), 'anointed' or [[Messiah]].
+
 ===Pronunciation===
 *[[w:AHD|AHD]]: krīst
 *[[w:IPA|IPA]]: /kraɪst/
