--- a/wiki/Christmas.wikitext
+++ b/wiki/Christmas.wikitext
@@ -26,7 +26,7 @@ KRIST-mahs
 *Italian: [[natale]] ''m''
 *Japanese: [[クリスマス]] (kurisumasu)
 *Greek: [[Christougenia]]
-*Spanish: [[navidad]] ''f''???
+*Spanish: [[navidad]] 
 *Swedish: [[Jul]]
 
 ====Related words====
