/* Translations */added Koine Greek word <messiah#33982>

--- a/wiki/messiah.wikitext
+++ b/wiki/messiah.wikitext
@@ -17,3 +17,4 @@
 *[[Finnish]]: [[messias]]
 *Hebrew: [[משיח]]
 *Slovene: [[odrešenik]] ''m'', [[Odrešenik]] ''m'' (of Christ), [[mesija]] ''m'' (liter.)
+*Koine Greek Χριστος(see [[Christ]])
