--- a/wiki/Jew.wikitext
+++ b/wiki/Jew.wikitext
@@ -50,7 +50,7 @@ a person connected to the jewish land Israel,possibly an aethiest but a jew. Eve
 *Russian: [[еврей]] ''m'' (evrey)
 *{{sk}}: [[žid]] ''m'', [[židovka]] ''f''
 *Spanish: [[judío]] ''m'', [[judía]] ''f''
-*Swedish: [[judio]]
+*Swedish: [[jude]]
 |}
 |}
 
