removed dutch <orgaan#33447>

--- a/wiki/orgaan.wikitext
+++ b/wiki/orgaan.wikitext
@@ -1,8 +1,4 @@
-==[[Dutch]]==
+==Dutch==
 ===Noun===
 '''orgaan''' ''n'' (plural: [[orgaan|organen]], diminutive: [[orgaan|orgaantje]], plural diminutive: [[orgaan|orgaantjes]])
-
-===Translations===
-*[[English]]: [[organ]]
-*[[German]]: [[Organ]] ''n''
-*[[Romanian]]: [[organ]]
+#[[Organ]]
