--- a/wiki/wheat.wikitext
+++ b/wiki/wheat.wikitext
@@ -13,4 +13,5 @@
 *[[Hausa]]: [[álkámà]]
 *Italian: [[frumento]] ''m''
 *Portuguese: [[trigo]] ''m''
+*Serbian: [[pšenica]] ''m''
 *Spanish: [[trigo]] ''m''
