--- a/wiki/theism.wikitext
+++ b/wiki/theism.wikitext
@@ -1,1 +1,1 @@
-Belief in  the existence of [[God]],especially by or through revelation.
+Theism(from Greek Θεϊσμός, theismos):Belief in the existence of [[God]],especially by or through revelation.
