--- a/wiki/ixnay.wikitext
+++ b/wiki/ixnay.wikitext
@@ -2,7 +2,7 @@
 :'''[[ix-nay]]'''
 
 ===Etymology===
-[[Pig Latin]] version of [[nix]]; possibly the only Pig Latin phrase to enter common English.
+[[Pig Latin]] version of [[nix]]; possibly the only Pig Latin phrase to enter common English besides [[amscray]].
 
 ===Pronunciation===
 {| border=1 cellpadding=5
