/* Noun */added def.2 <theocracy#59529>

--- a/wiki/theocracy.wikitext
+++ b/wiki/theocracy.wikitext
@@ -4,4 +4,5 @@
 
 '''theocracy'''
 
-#[[Government]] under the control of a Church or state-sponsored religion.
+1# [[Government]] under the control of a Church or state-sponsored religion.<P>
+2.Rule by [[God]]
