moved hebrew letter info into hebrew letter definition <ב#65388>

--- a/wiki/%D7%91.wikitext
+++ b/wiki/%D7%91.wikitext
@@ -1,1 +1,7 @@
-#REDIRECT [[beth]]
+===Letter===
+'''&#1489;''' (spelled ''[[beth]]'') is the second letter of the [[Hebrew]] alphabet.
+
+* '''Last''': [[&#1488;]]
+* '''Next''': [[&#1490;]]
+
+[[Category:Hebrew letters]]
