moved hebrew letter info into hebrew letter definition <beth#65349>

--- a/wiki/beth.wikitext
+++ b/wiki/beth.wikitext
@@ -1,11 +1,7 @@
 ==English==
 
-* Letter of the [[Wikipedia:Hebrew alphabet|Hebrew alphabet]]: &#1489;
-** Last: [[Aleph|&#1488;]]
-** Next: [[Gimel|&#1490;]]
-
 ===Noun===
 
 '''beth'''
 
-# The second letter of the Hebrew alphabet.
+# The second letter of the Hebrew alphabet, [[&#1489;]].
