--- a/wiki/%D7%90.wikitext
+++ b/wiki/%D7%90.wikitext
@@ -1,8 +1,10 @@
 ===Letter===
-'''א''' or ''[[Aleph]]'' ( pronounced ah'lehf ), is the Primary, and also the first symbol, which begins to form the set of characters, which taken together, completely give rise, to the form of the holy [[Hebrew]] [[Aleph]]-[[Beit]]. The english word "[[alphabet]]" is derived from the pronunciation associated with the '''א''' or ''Aleph'', and the symbol of it's birth, the [[ב]] or ''Beit''.
+'''א''' (spelled ''[[aleph]]'') is the first letter of the [[Hebrew]] alphabet.
 
-* ''The Symbols of the [[Hebrew]] [[Aleph]]-[[Beit]]''
-** '''Next''': [[ב]]
+&#1488; is the Primary, and also the first symbol, which begins to form the set of characters, which taken together, completely give rise, to the form of the holy [[Hebrew]] [[Aleph]]-[[Beit]]. The english word "[[alphabet]]" is derived from the pronunciation associated with the '''א''' or ''Aleph'', and the symbol of it's birth, the [[ב]] or ''Beit''.
+
+* '''Next''': [[ב]]
+
 ===Other Forms===
 *Wide: [[ﬡ]]
 *With [[Patah]]: [[אַ]]
