shuffling around to fit standards.  still need to resolve "Beit" vs "Beth" spellings <א#42868>

--- a/wiki/%D7%90.wikitext
+++ b/wiki/%D7%90.wikitext
@@ -1,9 +1,9 @@
 ===Letter===
-'''א''' (spelled ''[[aleph]]'') is the first letter of the [[Hebrew]] alphabet.
+'''&#1488;''' (spelled ''[[aleph]]'') is the first letter of the [[Hebrew]] alphabet.
+
+* '''Next''': [[&#1489;]]
 
 &#1488; is the Primary, and also the first symbol, which begins to form the set of characters, which taken together, completely give rise, to the form of the holy [[Hebrew]] [[Aleph]]-[[Beit]]. The english word "[[alphabet]]" is derived from the pronunciation associated with the '''א''' or ''Aleph'', and the symbol of it's birth, the [[ב]] or ''Beit''.
-
-* '''Next''': [[ב]]
 
 ===Other Forms===
 *Wide: [[ﬡ]]
