moved hebrew letter info into hebrew letter definition <ג#65389>

--- a/wiki/%D7%92.wikitext
+++ b/wiki/%D7%92.wikitext
@@ -1,1 +1,7 @@
-#REDIRECT [[gimel]]
+===Letter===
+'''&#1490;''' (spelled ''[[gimel]]'') is the third letter of the [[Hebrew]] alphabet.
+
+* '''Last''': [[&#1489;]]
+* '''Next''': [[&#1491;]]
+
+[[Category:Hebrew letters]]
