moved hebrew letter info into hebrew letter definition <Gimel#65350>

--- a/wiki/Gimel.wikitext
+++ b/wiki/Gimel.wikitext
@@ -1,14 +1,10 @@
 ==English==
 
-* Letter of the [[Wikipedia:Hebrew alphabet|Hebrew alphabet]]: &#1490;
-** Last: [[Beth|&#1489;]]
-** Next: [[Daleth|&#1491;]]
-
 ===Noun===
 
 '''gimel'''
 
-# The third letter of the Hebrew alphabet.
+# The third letter of the Hebrew alphabet, [[&#1490;]].
 
 ===Proper noun===
 '''Gimel'''
