--- a/wiki/mid-December.wikitext
+++ b/wiki/mid-December.wikitext
@@ -2,6 +2,17 @@
 {{-etym-}}
 From [[mid]], and [[December]].
 
-{{-phrase-}}
+===Noun===
 '''mid-December'''
-# Any day in the middle of [[December]].
+
+# Any time in the middle of [[December]].
+
+===Adjective===
+'''mid-December'''
+
+#Happening in the middle of December.
+
+===Adverb===
+'''mid-December'''
+
+#In the middle of December.
