moved hebrew letter info into hebrew letter definition <daleth#65351>

--- a/wiki/daleth.wikitext
+++ b/wiki/daleth.wikitext
@@ -1,11 +1,7 @@
 ==English==
 
-* Letter of the [[Wikipedia:Hebrew alphabet|Hebrew alphabet]]: &#1491;
-** Last: [[Gimel|&#1490;]]
-** Next: [[He|&#1492;]]
-
 ===Noun===
 
 '''daleth'''
 
-# The fourth letter of the Hebrew alphabet.
+# The fourth letter of the Hebrew alphabet, [[&#1491;]].
