moved hebrew letter info into hebrew letter definition <ד#65390>

--- a/wiki/%D7%93.wikitext
+++ b/wiki/%D7%93.wikitext
@@ -1,1 +1,7 @@
-#REDIRECT [[daleth]]
+===Letter===
+'''&#1491;''' (spelled ''[[daleth]]'') is the fourth letter of the [[Hebrew]] alphabet.
+
+* '''Last''': [[&#1490;]]
+* '''Next''': [[&#1492;]]
+
+[[Category:Hebrew letters]]
