moved hebrew letter info into hebrew letter definition <ה#65391>

--- a/wiki/%D7%94.wikitext
+++ b/wiki/%D7%94.wikitext
@@ -1,1 +1,7 @@
-#REDIRECT [[he]]
+===Letter===
+'''&#1492;''' (spelled ''[[he]]'') is the fifth letter of the [[Hebrew]] alphabet.
+
+* '''Last''': [[&#1491;]]
+* '''Next''': [[&#1493;]]
+
+[[Category:Hebrew letters]]
