moved hebrew letter info into hebrew letter definition <he#5747>

--- a/wiki/he.wikitext
+++ b/wiki/he.wikitext
@@ -66,9 +66,7 @@ The third person singular, masculine, nominative case. (''Accusative'': [[him]],
 * [[w:SAMPA|SAMPA]]: /he:/
 ====Noun====
 '''he'''
-#The fifth letter of the [[Wikipedia:Hebrew alphabet|Hebrew alphabet]]: &#1492;
-#* Last: [[Daleth|&#1491;]]
-#* Next: [[Vav|&#1493;]]
+# The fifth letter of the [[Hebrew]] alphabet, [[&#1492;]].
 
 ----
 
