--- a/wiki/vav.wikitext
+++ b/wiki/vav.wikitext
@@ -1,14 +1,10 @@
 ==English==
 
-* Letter of the [[Wikipedia:Hebrew alphabet|Hebrew alphabet]]: &#1493;
-** Last: [[He|&#1492;]]
-** Next: [[Zayin|&#1494;]]
-
 ===Noun===
 
 '''vav''', also '''waw''' or '''vau'''
 
-# The sixth letter of the Hebrew alphabet.
+# The sixth letter of the Hebrew alphabet, [[&#1493;]].
 
 ===See also===
 *[[و]]
