moved hebrew letter info into hebrew letter definition <ו#65393>

--- a/wiki/%D7%95.wikitext
+++ b/wiki/%D7%95.wikitext
@@ -1,1 +1,7 @@
-#REDIRECT [[vav]]
+===Letter===
+'''&#1493;''' (spelled ''[[vav]]'') is the sixth letter of the [[Hebrew]] alphabet.
+
+* '''Last''': [[&#1492;]]
+* '''Next''': [[&#1494;]]
+
+[[Category:Hebrew letters]]
