moved hebrew letter info into hebrew letter definition <ז#65394>

--- a/wiki/%D7%96.wikitext
+++ b/wiki/%D7%96.wikitext
@@ -1,1 +1,7 @@
-#REDIRECT [[zayin]]
+===Letter===
+'''&#1494;''' (spelled ''[[zayin]]'') is the seventh letter of the [[Hebrew]] alphabet.
+
+* '''Last''': [[&#1493;]]
+* '''Next''': [[&#1495;]]
+
+[[Category:Hebrew letters]]
