moved hebrew letter info into hebrew letter definition <zayin#65358>

--- a/wiki/zayin.wikitext
+++ b/wiki/zayin.wikitext
@@ -1,11 +1,7 @@
 ==English==
 
-* Letter of the [[Wikipedia:Hebrew alphabet|Hebrew alphabet]]: &#1494;
-** Last: [[Vav|&#1493;]]
-** Next: [[Heth|&#1495;]]
-
 ===Noun===
 
 '''zayin'''
 
-# The seventh letter of the Hebrew alphabet.
+# The seventh letter of the Hebrew alphabet, [[&#1494;]].
