moved hebrew letter info into hebrew letter definition <ח#65395>

--- a/wiki/%D7%97.wikitext
+++ b/wiki/%D7%97.wikitext
@@ -1,1 +1,7 @@
-#REDIRECT [[heth]]
+===Letter===
+'''&#1495;''' (spelled ''[[heth]]'') is the eighth letter of the [[Hebrew]] alphabet.
+
+* '''Last''': [[&#1494;]]
+* '''Next''': [[&#1496;]]
+
+[[Category:Hebrew letters]]
