moved hebrew letter info into hebrew letter definition <heth#65359>

--- a/wiki/heth.wikitext
+++ b/wiki/heth.wikitext
@@ -1,11 +1,7 @@
 ==English==
 
-* Letter of the [[Wikipedia:Hebrew alphabet|Hebrew alphabet]]: &#1495;
-** Last: [[Zayin|&#1494;]]
-** Next: [[Teth|&#1496;]]
-
 ===Noun===
 
 '''heth'''
 
-# The eighth letter of the Hebrew alphabet.
+# The eighth letter of the Hebrew alphabet, [[&#1495;]].
