moved hebrew letter info into hebrew letter definition <ט#65396>

--- a/wiki/%D7%98.wikitext
+++ b/wiki/%D7%98.wikitext
@@ -1,1 +1,7 @@
-#REDIRECT [[teth]]
+===Letter===
+'''&#1496;''' (spelled ''[[teth]]'') is the ninth letter of the [[Hebrew]] alphabet.
+
+* '''Last''': [[&#1495;]]
+* '''Next''': [[&#1497;]]
+
+[[Category:Hebrew letters]]
