--- a/wiki/teth.wikitext
+++ b/wiki/teth.wikitext
@@ -1,11 +1,7 @@
 ==English==
 
-* Letter of the [[Wikipedia:Hebrew alphabet|Hebrew alphabet]]: &#1496;
-** Last: [[Heth|&#1495;]]
-** Next: [[Yodh|&#1497;]]
-
 ===Noun===
 
 '''teth'''
 
-# The ninth letter of the Hebrew alphabet.
+# The ninth letter of the Hebrew alphabet, [[&#1496;]]
