moved hebrew letter info into hebrew letter definition <י#65397>

--- a/wiki/%D7%99.wikitext
+++ b/wiki/%D7%99.wikitext
@@ -1,1 +1,7 @@
-#REDIRECT [[yodh]]
+===Letter===
+'''&#1497;''' (spelled ''[[yodh]]'') is the tenth letter of the [[Hebrew]] alphabet.
+
+* '''Last''': [[&#1496;]]
+* '''Next''': [[&#1498;]]
+
+[[Category:Hebrew letters]]
