--- a/wiki/%D8%A7%D9%84%D9%84%D9%87.wikitext
+++ b/wiki/%D8%A7%D9%84%D9%84%D9%87.wikitext
@@ -1,2 +1,5 @@
-[[Arabic]] for [[Allah]]([[God]])
+==Arabic==
+'''الله'''
+# [[Allah]], the [[God]]
+
 *see [http://en.wikipedia.org/wiki/Allah Wikipedia article on Allah]
