--- a/wiki/Allah.wikitext
+++ b/wiki/Allah.wikitext
@@ -1,6 +1,6 @@
 ==English==
 ===Etymology===
-Arabic [[الله]] (allāh), from [[ال-‏]] (al-) "the" + [[اله|إِله]] (’ilah) "god".
+Arabic [[الله]] (allāh), from [[الـ]] (al-) "the" + [[اله|إِله]] (’ilah) "god".
 
 ===Proper noun===
 '''Allah'''
