moved hebrew letter info into hebrew letter definition <כ#65398>

--- a/wiki/%D7%9B.wikitext
+++ b/wiki/%D7%9B.wikitext
@@ -1,1 +1,8 @@
-#REDIRECT [[kaph]]
+===Letter===
+'''&#1499;''' (spelled ''[[kaph]]'') is the eleventh letter of the [[Hebrew]] alphabet.<br>
+'''&#1498;''' is the final form of the letter, used only at the end of a word.
+
+* '''Last''': [[&#1497;]]
+* '''Next''': [[&#1500;]]
+
+[[Category:Hebrew letters]]
