--- a/wiki/fillip.wikitext
+++ b/wiki/fillip.wikitext
@@ -1,2 +1,11 @@
-[[English]]
-# To release the index finger from the hold of a thumb with a snap.
+=={{en}}==
+=== Noun ===
+# The act of releasing the index finger from the hold of a thumb with a snap.
+==== Translations ====
+{| border=0  width=100%
+|-
+|bgcolor="#FFFFE0" valign=top width=48%|
+{|
+*{{ja}}: [[びんた]]
+|}
+|}
