moved hebrew letter info into hebrew letter definition <ל#65399>

--- a/wiki/%D7%9C.wikitext
+++ b/wiki/%D7%9C.wikitext
@@ -1,1 +1,7 @@
-#REDIRECT [[lamedh]]
+===Letter===
+'''&#1500;''' (spelled ''[[lamedh]]'') is the twelfth letter of the [[Hebrew]] alphabet.
+
+* '''Last''': [[&#1499;]]
+* '''Next''': [[&#1502;]]
+
+[[Category:Hebrew letters]]
