moved hebrew letter info into hebrew letter definition <lamedh#65367>

--- a/wiki/lamedh.wikitext
+++ b/wiki/lamedh.wikitext
@@ -1,11 +1,7 @@
 ==English==
 
-* Letter of the [[Wikipedia:Hebrew alphabet|Hebrew alphabet]]: &#1500;
-** Last: [[Kaph|&#1498;]]
-** Next: [[Mem|&#1502;]]
-
 ===Noun===
 
 '''lamedh'''
 
-# The twelfth letter of the Hebrew alphabet.
+# The twelfth letter of the Hebrew alphabet, [[&#1500;]].
