moved hebrew letter info into hebrew letter definition <מ#65401>

--- a/wiki/%D7%9E.wikitext
+++ b/wiki/%D7%9E.wikitext
@@ -1,1 +1,8 @@
-#REDIRECT [[mem]]
+===Letter===
+'''&#1502;''' (spelled ''[[mem]]'') is the thirteenth letter of the [[Hebrew]] alphabet.<br>
+'''&#1501;''' is the final form of the letter, used only at the end of a word.
+
+* '''Last''': [[&#1500;]]
+* '''Next''': [[&#1504;]]
+
+[[Category:Hebrew letters]]
