--- a/wiki/%E7%A5%9E%E9%A2%A8.wikitext
+++ b/wiki/%E7%A5%9E%E9%A2%A8.wikitext
@@ -1,1 +1,4 @@
- '''神風''' japanese ideogram for'' kami'' "spirit"+''kaze'' "wind" ie ''[[kamikaze]]''
+==Japanese==
+'''[[神]][[風]]'''
+
+# spiritual wind, '' kami'' "god" +''kaze'' "wind" ie ''[[kamikaze]]'', originally blew in [[元寇]]
