moved hebrew letter info into hebrew letter definition <נ#65403>

--- a/wiki/%D7%A0.wikitext
+++ b/wiki/%D7%A0.wikitext
@@ -1,1 +1,8 @@
-#REDIRECT [[nun]]
+===Letter===
+'''&#1504;''' (spelled ''[[nun]]'') is the fourteenth letter of the [[Hebrew]] alphabet.<br>
+'''&#1503;''' is the final form of the letter, used only at the end of a word.
+
+* '''Last''': [[&#1502;]]
+* '''Next''': [[&#1505;]]
+
+[[Category:Hebrew letters]]
