/* Verb */ Participles & Infinitives <cognoscere#65507>

--- a/wiki/cognoscere.wikitext
+++ b/wiki/cognoscere.wikitext
@@ -6,6 +6,55 @@
 ('''cogn&#333;sc&#333;''', '''cogn&#333;scere''', '''cogn&#333;v&#299;''',  '''cognitum''')
 # To know, as in: to recognize, to be acquainted with.
 
+====Participles====
+<!--'''Present Active Participle:''' <big> cogn&#333;sc&#275;ns </big> : ''knowing'' <br>
+'''Perfect Passive Participle:''' <big> cognitus/cognita/cognitum </big> : ''having been known'' <br>
+'''Future Active Participle:''' <big> cognit&#363;rus/cognit&#363;ra/cognit&#363;rum </big> : ''being about to know'' <br>
+'''Future Passive Participle:''' <big> cogn&#333;scendus/cogn&#333;scenda/cogn&#333;scendum </big> : ''being about to be known'' <br>-->
+{| cellpadding="5" border="1"
+!
+! ''Active''
+! ''Passive''
+|-
+! ''Present''
+| <big> cogn&#333;sc&#275;ns
+| &mdash;
+|-
+! ''Perfect''
+| &mdash;
+| <big> cognitus
+|-
+! ''Future''
+| <big> cognit&#363;rus
+| <big> cogn&#333;scendus
+|}
+
+
+====Infinitives====
+<!--'''Present Active Infinitive:''' <big> cogn&#333;scere </big> : ''to know'' <br>
+'''Present Passive Infinitive:''' <big> cogn&#333;sc&#299; </big> : ''to be known'' <br>
+'''Perfect Active Infinitive:''' <big> cogn&#333;visse </big> : ''to have known'' <br>
+'''Perfect Passive Infinitive:''' <big> cognitus/cognita/cognitum esse </big> : ''to have been known'' <br>
+'''Future Active Infinitive:''' <big> cognit&#363;rus/cognit&#363;ra/cognit&#363;rum esse </big> : ''to be about to know'' <br>
+'''Future Passive Infinitive:''' <big> cognitum &#299;r&#299; </big> : ''to be about to be known'' <br>-->
+{| cellpadding="5" border="1"
+!
+! ''Active''
+! ''Passive''
+|-
+! ''Present''
+| <big> cogn&#333;scere
+| <big> cogn&#333;sc&#299;
+|-
+! ''Perfect''
+| <big> cogn&#333;visse
+| <big> cognitus esse
+|-
+! ''Future''
+| <big> cognit&#363;rus esse
+| <big> cognitum &#299;r&#299;
+|}
+
 ====Conjugation====
 Third conjugation (3).
 
