moved hebrew letter info into hebrew letter definition <mem#65368>

--- a/wiki/mem.wikitext
+++ b/wiki/mem.wikitext
@@ -1,11 +1,7 @@
 ==English==
 
-* Letter of the [[Wikipedia:Hebrew alphabet|Hebrew alphabet]]: &#1501; &#1502;
-** Last: [[Lamedh|&#1500;]]
-** Next: [[Nun|&#1504;]]
-
 ===Noun===
 
 '''mem'''
 
-# The thirteenth letter of the Hebrew alphabet.
+# The thirteenth letter of the Hebrew alphabet, [[&#1501;]] [[&#1502;]].
