moved hebrew letter info into hebrew letter definition <nun#41108>

--- a/wiki/nun.wikitext
+++ b/wiki/nun.wikitext
@@ -35,11 +35,8 @@
 * [[w:SAMPA|SAMPA]]: nUn
 * [[w:AHD|AHD]]: nŏŏn
 ----
-* Letter of the [[Wikipedia:Hebrew alphabet|Hebrew alphabet]]: &#1503; &#1504;
-** Last: [[Mem|&#1502;]]
-** Next: [[Samekh|&#1505;]]
 
 ===Noun===
 '''nun'''
 
-# The fourteenth letter of the Hebrew alphabet.
+# The fourteenth letter of the Hebrew alphabet, [[&#1503;]] [[&#1504;]].
