moved hebrew letter info into hebrew letter definition <ס#65404>

--- a/wiki/%D7%A1.wikitext
+++ b/wiki/%D7%A1.wikitext
@@ -1,1 +1,7 @@
-#REDIRECT [[samekh]]
+===Letter===
+'''&#1505;''' (spelled ''[[samekh]]'') is the fourteenth letter of the [[Hebrew]] alphabet.
+
+* '''Last''': [[&#1504;]]
+* '''Next''': [[&#1506;]]
+
+[[Category:Hebrew letters]]
