moved hebrew letter info into hebrew letter definition <samekh#65370>

--- a/wiki/samekh.wikitext
+++ b/wiki/samekh.wikitext
@@ -1,10 +1,6 @@
 ==English==
 
-* Letter of the [[Wikipedia:Hebrew alphabet|Hebrew alphabet]]: &#1505;
-** Last: [[Nun|&#1504;]]
-** Next: [[Ayin|&#1506;]]
-
 ===Noun===
 '''samekh''', also '''samech''' or '''samek'''
 
-# The fifteenth letter of the Hebrew alphabet.
+# The fifteenth letter of the Hebrew alphabet, [[&#1505;]].
