moved hebrew letter info into hebrew letter definition <ayin#65371>

--- a/wiki/ayin.wikitext
+++ b/wiki/ayin.wikitext
@@ -1,10 +1,6 @@
 ==English==
 
-* Letter of the [[Wikipedia:Hebrew alphabet|Hebrew alphabet]]: &#1506;
-** Last: [[Samekh|&#1505;]]
-** Next: [[Pe|&#1507;]]
-
 ===Noun===
 '''ayin'''
 
-# The sixteenth letter of the Hebrew alphabet.
+# The sixteenth letter of the [[Hebrew]] alphabet, [[&#1506;]].
