moved hebrew letter info into hebrew letter definition <ע#65405>

--- a/wiki/%D7%A2.wikitext
+++ b/wiki/%D7%A2.wikitext
@@ -1,1 +1,7 @@
-#REDIRECT [[ayin]]
+===Letter===
+'''&#1506;''' (spelled ''[[ayin]]'') is the sixteenth letter of the [[Hebrew]] alphabet.
+
+* '''Last''': [[&#1505;]]
+* '''Next''': [[&#1508;]]
+
+[[Category:Hebrew letters]]
