moved hebrew letter info into hebrew letter definition <pe#33405>

--- a/wiki/PE.wikitext
+++ b/wiki/PE.wikitext
@@ -1,13 +1,9 @@
 ==English==
 
-* Letter of the [[Wikipedia:Hebrew alphabet|Hebrew alphabet]]: &#1507; &#1508;
-** Last: [[Samekh|&#1506;]]
-** Next: [[Sadhe|&#1510;]]
-
 ===Noun===
 '''pe'''
 
-# The seventeenth letter of the Hebrew alphabet.
+# The seventeenth letter of the [[Hebrew]] alphabet, [[&#1507;]] [[&#1508;]].
 
 ----
 ==Tok Pisin==
