moved hebrew letter info into hebrew letter definition <פ#65407>

--- a/wiki/%D7%A4.wikitext
+++ b/wiki/%D7%A4.wikitext
@@ -1,1 +1,8 @@
-#REDIRECT [[pe]]
+===Letter===
+'''&#1508;''' (spelled ''[[pe]]'') is the seventeenth letter of the [[Hebrew]] alphabet.<br>
+'''&#1507;''' is the final form of the leter, used only at the end of a word.
+
+* '''Last''': [[&#1506;]]
+* '''Next''': [[&#1510;]]
+
+[[Category:Hebrew letters]]
