--- a/wiki/tsade.wikitext
+++ b/wiki/tsade.wikitext
@@ -1,11 +1,7 @@
 ==English==
 
-* Letter of the [[Wikipedia:Hebrew alphabet|Hebrew alphabet]]: &#1509; &#1510;
-** Last: [[Pe|&#1507;]]
-** Next: [[Qoph|&#1511;]]
-
 ===Noun===
 
 '''sadhe''', also '''tsadi''' or '''sade''' or '''sadi''' or '''tsade'''
 
-# The eightteenth letter of the Hebrew alphabet.
+# The eighteenth letter of the [[Hebrew]] alphabet, [[&#1509;]] [[&#1510;]].
