moved hebrew letter info into hebrew letter definition <צ#65409>

--- a/wiki/%D7%A6.wikitext
+++ b/wiki/%D7%A6.wikitext
@@ -1,1 +1,8 @@
-#REDIRECT [[sadhe]]
+===Letter===
+'''&#1510;''' (spelled ''[[sadhe]]'') is the eighteenth letter of the [[Hebrew]] alphabet.<br>
+'''&#1509;''' is the final form of the leter, used only at the end of a word.
+
+* '''Last''': [[&#1508;]]
+* '''Next''': [[&#1511;]]
+
+[[Category:Hebrew letters]]
