moved hebrew letter info into hebrew letter definition <qoph#65374>

--- a/wiki/qoph.wikitext
+++ b/wiki/qoph.wikitext
@@ -1,11 +1,7 @@
 ==English==
 
-* Letter of the [[Wikipedia:Hebrew alphabet|Hebrew alphabet]]: &#1511;
-** Last: [[Sadhe|&#1510;]]
-** Next: [[Resh|&#1512;]]
-
 ===Noun===
 
 '''qoph'''
 
-# The nineteenth letter of the Hebrew alphabet.
+# The nineteenth letter of the [[Hebrew]] alphabet, [[&#1511;]].
