moved hebrew letter info into hebrew letter definition <ק#65410>

--- a/wiki/%D7%A7.wikitext
+++ b/wiki/%D7%A7.wikitext
@@ -1,1 +1,7 @@
-#REDIRECT [[qoph]]
+===Letter===
+'''&#1511;''' (spelled ''[[qoph]]'') is the nineteenth letter of the [[Hebrew]] alphabet.
+
+* '''Last''': [[&#1510;]]
+* '''Next''': [[&#1512;]]
+
+[[Category:Hebrew letters]]
