Perfect Subjunctive quartet. <cognoscere#65507>

--- a/wiki/cognoscere.wikitext
+++ b/wiki/cognoscere.wikitext
@@ -201,3 +201,39 @@ cogn&#333;scer&#275;tur : ''maybe he/she/it used to be known'' <br>
 cogn&#333;scer&#275;mur : ''maybe we used to be known'' <br>
 cogn&#333;scer&#275;min&#299; : ''maybe you (all) used to be known'' <br>
 cogn&#333;scerentur : ''maybe they used to be known'' <br>
+
+=====<u>''Perfect Subjunctive''</u>=====
+cogn&#333;verim : ''I may have known'' <br>
+cogn&#333;ver&#299;s : ''you may have known'' <br>
+cogn&#333;verit : ''he/she/it may have known'' <br>
+:&mdash; <br>
+cogn&#333;ver&#299;mus : ''we may have known'' <br>
+cogn&#333;ver&#299;tis : ''you (all) may have known'' <br>
+cogn&#333;verint : ''they may have known'' <br>
+
+=====<u>''Pluperfect Subjunctive</u>=====
+cogn&#333;vissem : ''maybe I had known'' <br>
+cogn&#333;viss&#275;s : ''maybe you had known'' <br>
+cogn&#333;visset : ''maybe he/she/it had known'' <br>
+:&mdash;  <br>
+cogn&#333;viss&#275;mus : ''maybe we had known'' <br>
+cogn&#333;viss&#275;tis : ''maybe you (all) had known'' <br>
+cogn&#333;vissent : ''maybe they had known'' <br>
+
+=====<u> ''Perfect Subjunctive Passive</u>=====
+cognitus/cognita/cognitum sim : ''I may have been known'' <br>
+cognitus/cognita/cognitum s&#299;s : ''you may have been known'' <br>
+cognitus/cognita/cognitum sit : ''he/she/it may have been known'' <br>
+:&mdash; <br>
+cognit&#299;/cognitae/cognita s&#299;mus : ''we may have been known'' <br>
+cognit&#299;/cognitae/cognita s&#299;tis : ''you (all) may have been known'' <br>
+cognit&#299;/cognitae/cognita sint : ''they may have been known'' <br>
+
+=====<u> ''Pluperfect Subjunctive Passive</u>=====
+cognitus/cognita/cognitum essem : ''maybe I had been known'' <br>
+cognitus/cognita/cognitum ess&#275;s : ''maybe you had been known'' <br>
+cognitus/cognita/cognitum esset : ''maybe he/she/it had been known'' <br>
+:&mdash; <br>
+cognit&#299;/cognitae/cognita ess&#275;mus : ''maybe we had been known'' <br>
+cognit&#299;/cognitae/cognita ess&#275;tis : ''maybe you (all) had been known'' <br>
+cognit&#299;/cognitae/cognita essent : ''maybe they had been known'' <br>
