--- a/wiki/%E6%96%87.wikitext
+++ b/wiki/%E6%96%87.wikitext
@@ -26,6 +26,116 @@
 *** '''[[Penkyamp]]''': 
 *** '''[[Yale]]''': man4
 
+===Compounds===
+*[[文白]]
+*[[文本]]
+*[[文笔]]
+*[[文不对题]]
+*[[文不加点]]
+*[[文不尽意]]
+*[[文才]]
+*[[文采]]
+*[[文昌鱼]]
+*[[文词]], [[文辞]]
+*[[文从字顺]]
+*[[文牍主义]]
+*[[文法]]
+*[[文房]]
+*[[文房四宝]]
+*[[文风]]
+*[[文风不动]]
+*[[文稿]]
+*[[文告]]
+*[[文革]]
+*[[文工团]]
+*[[文官]]
+*[[文过饰非]]
+*[[文豪]]
+*[[文化]]
+*[[文化层]]
+*[[文化大革命]]
+*[[文化宫]]
+*[[文化馆]]
+*[[文化买办]]
+*[[文化人]]
+*[[文化水平]]
+*[[文化站]]
+*[[文火]]
+*[[文集]]
+*[[文籍]]
+*[[文件]]
+*[[文江学海]]
+*[[文教]]
+*[[文静]]
+*[[文句]]
+*[[文具]]
+*[[文据]]
+*[[文科]]
+*[[文库]]
+*[[文莱]]
+*[[文理]]
+*[[文林]]
+*[[文律]]
+*[[文脉]]
+*[[文盲]]
+*[[文庙]]
+*[[文名]]
+*[[文明]]
+*[[文墨]]
+*[[文痞]]
+*[[俄凭]]
+*[[文气]]
+*[[文契]]
+*[[文人]]
+*[[文如其人]]
+*[[文弱]]
+*[[文山会海]]
+*[[文身]]
+*[[文史]]
+*[[文士]]
+*[[文饰]]
+*[[文书]]
+*[[文思]]
+*[[文坛]]
+*[[文体]]
+*[[文无定法]]
+*[[文武]]
+*[[文武之道，一张一弛]]
+*[[文物]]
+*[[文戏]]
+*[[文献]]
+*[[文胸]]
+*[[文修武备]]
+*[[文秀]]
+*[[文选]]
+*[[文学]]
+*[[文学家]]
+*[[文学语言]]
+*[[文雅]]
+*[[文言]]
+*[[文言文]]
+*[[文艺]]
+*[[文艺复兴]]
+*[[文艺批评]]
+*[[文艺学]]
+*[[文友]]
+*[[文娱]]
+*[[文苑]]
+*[[文约]]
+*[[文藻]]
+*[[文责]]
+*[[文摘]]
+*[[文战]]
+*[[文章]]
+*[[文职]]
+*[[文治]]
+*[[文质彬彬]]
+*[[文绉绉]], [[文绉绉的]]
+*[[文竹]]
+*[[文字]]
+*[[文字学]]
+*[[文字狱]]
+
 * '''Other info''': 
 
 ----
