moved hebrew letter info into hebrew letter definition <resh#65375>

--- a/wiki/resh.wikitext
+++ b/wiki/resh.wikitext
@@ -1,11 +1,7 @@
 ==English==
 
-* Letter of the [[Wikipedia:Hebrew alphabet|Hebrew alphabet]]: &#1512;
-** Last: [[Qoph|&#1511;]]
-** Next: [[Shin|&#1513;]]
-
 ===Noun===
 
 '''resh'''
 
-# The twentieth letter of the Hebrew alphabet.
+# The twentieth letter of the [[Hebrew]] alphabet, [[&#1512;]].
