--- a/wiki/%D7%A8.wikitext
+++ b/wiki/%D7%A8.wikitext
@@ -1,1 +1,7 @@
-#REDIRECT [[resh]]
+===Letter===
+'''&#1512;''' (spelled ''[[resh]]'') is the twentieth letter of the [[Hebrew]] alphabet.
+
+* '''Last''': [[&#1511;]]
+* '''Next''': [[&#1513;]]
+
+[[Category:Hebrew letters]]
