--- a/wiki/%E6%AC%A7.wikitext
+++ b/wiki/%E6%AC%A7.wikitext
@@ -34,6 +34,16 @@
 * '''Style''': [[Simplified Chinese]] 
 ** '''[[Traditional Chinese|Traditional]] equivalent''': [[歐]]
 
+===Compounds===
+*[[欧化]]
+*[[欧罗巴人种]]
+*[[欧姆]]
+*[[欧式]]
+*[[欧体]]
+*[[欧元]]
+*[[欧洲]]
+*[[欧盟]]
+
 * '''Other info''': 
 
 ----
