moved hebrew letter info into hebrew letter definition <shin#65383>

--- a/wiki/shin.wikitext
+++ b/wiki/shin.wikitext
@@ -4,9 +4,7 @@
 
 '''shin''' (plural: [[shins]])
 
-# The twentysecond letter of the [[Wikipedia:Hebrew alphabet|Hebrew alphabet]]: &#1513;
-#* Last: [[Resh|&#1512;]]
-#* Next: [[Tav|&#1514;]]
+# The twentysecond letter of the [[Hebrew]] alphabet, [[&#1513;]].
 
 ===Etymology===
 
